// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoList Component renders 1`] = `
<div
  className="videoList"
>
  <VideoListEntry
    handleSelectedVideo={[MockFunction]}
    key="1"
    video={
      Object {
        "id": Object {
          "videoId": "1",
        },
      }
    }
  />
  <VideoListEntry
    handleSelectedVideo={[MockFunction]}
    key="2"
    video={
      Object {
        "id": Object {
          "videoId": "2",
        },
      }
    }
  />
</div>
`;

exports[`VideoList Component renders Error message 1`] = `
<div
  className="videoList"
>
  <div>
    Error While loading Videos
  </div>
</div>
`;

exports[`VideoList Component renders Loading message 1`] = `
<div
  className="videoList"
>
  <div>
    Loading Videos.....
  </div>
</div>
`;
